--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Memoria/memoria.fls
 Memoria/memoria.aux
 __pycache__/
 .venv
+interpretabillidad12-main/ws-project/estudio_de_interpretabilidad.ipynb
